--- a/local-env/override-dev.yml
+++ b/local-env/override-dev.yml
@@ -1,5 +1,10 @@
 
 database:
+  host: localhost
   user: postgres
-  name: user-name
   connMax: 1
+aws:
+  url: http://localhost:4566
+  region: sa-east-2
+  sqs:
+    queue: http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000/queue_campaing
