fix: git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -45,4 +45,5 @@ local-env/secret*.yml
 internal/config/*.yml
 internal/config/*.yaml
 
-build/package/docker/localstack/.terraform
+build/package/docker/localstack/.terraform*
+build/package/docker/localstack/terraform*
