--- a/local-env/override-dev.yml
+++ b/local-env/override-dev.yml
@@ -1,8 +1,10 @@
 
 database:
   host: localhost
-  user: postgres
-  connMax: 1
+  username: postgres
+  conn: 
+    min: 1
+    max: 1
 aws:
   url: http://localhost:4566
   region: sa-east-2
